# co-actor

./: .gitignore  AGENTS.md  CO-ACTOR-STANDARD.md  GETTING-STARTED.md  README.md  pyproject.toml
adapters/builtin/: __init__.py  identity_adapter.py  memory_adapter.py  realtime_adapter.py
adapters/lighthouse/: __init__.py  identity_adapter.py  knowledge_adapter.py  memory_adapter.py  realtime_adapter.py
docs/: architecture-guide.md  narrative-plan.md  par-loop-customization-audit.md
engine/: __init__.py  attention.py  audit.py  cli.py  coactor.py  compliance.py  llm.py  models.py  profile.py  promise.py  prompts.py  relationship.py  repl.py  server.py  simulator.py  store.py
profiles/: code-reviewer.yaml  lighthouse.yaml  minimal.yaml  product-strategist.yaml  study-buddy.yaml  writing-coach.yaml
profiles/sample_data/: code-reviewer.json  product-strategist.json  study-buddy.json  writing-coach.json
research/: RESEARCH-HISTORY.md  prompt-engineering-strategy.md
research/narrative/: 01-cognitive-science-broccoli.md  02-ux-design-broccoli.md  03-game-storytelling-broccoli.md  05-comprehensive-codex.md  06-ux-design-codex.md  07-game-storytelling-codex.md
research/principles/: 00-converged.md  01-pure-task.md  02-ecologist.md  03-first-principles-broccoli.md  04-systems-thinker-codex.md  05-cognitive-scientist-codex.md  06-first-principles-codex.md
research/systems/: 00-synthesis.md  01-covenant-pure-broccoli.md  02-mycelial-eco-broccoli.md  03-first-principles-broccoli.md  04-homeostatic-loop-broccoli.md  05-promise-loop-codex.md  06-tidal-ecology-codex.md  07-par-loop-codex.md  08-prr-loop-codex.md
studio/: README.md  app.py  requirements.txt
studio/static/: index.html
tests/: test_attention.py  test_models.py  test_relationship.py
tests/fixtures/: sample_turn.json
(+4 files in other folders)
